[tool.poetry]
name = "webhomework-5"
version = "0.1.0"
description = ""
authors = ["HMixany <137229468+HMixany@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
